metadata for facebook, better icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/kchu.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/potentialKCHULogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Kansas City Homeless Union (KCHU) is a union of unhoused Kansas Citians, actively seeking equality and equity, and fighting against the system that perpetuates and sustains homelessness."
     />
+    <meta property="og:title" content="KC Homeless Union" />
+    <meta
+      property="og:description"
+      content="Kansas City Homeless Union (KCHU) is a union of unhoused Kansas Citians, actively seeking equality and equity, and fighting against the system that perpetuates and sustains homelessness."
+    />
+    <meta
+      property="og:image:url"
+      content="%PUBLIC_URL%/kchuLogo325.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="%PUBLIC_URL%/kchuLogo325.png"
+    />
+    <meta property="og:url" content="http://www.kchomelessunion.org" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/kchuLogo325.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>KCHU</title>
