added twitter link preview stuff

--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,30 @@
       name="description"
       content="Kansas City Homeless Union (KCHU) is a union of unhoused Kansas Citians, actively seeking equality and equity, and fighting against the system that perpetuates and sustains homelessness."
     />
+    <!-- facebook preview data -->
     <meta property="og:title" content="KC Homeless Union" />
     <meta
       property="og:description"
       content="Kansas City Homeless Union (KCHU) is a union of unhoused Kansas Citians, actively seeking equality and equity, and fighting against the system that perpetuates and sustains homelessness."
     />
-    <meta
-      property="og:image:url"
-      content="%PUBLIC_URL%/kchuLogo325.png"
-    />
+    <meta property="og:image:url" content="%PUBLIC_URL%/kchuLogo325.png" />
     <meta
       property="og:image:secure_url"
       content="%PUBLIC_URL%/kchuLogo325.png"
     />
     <meta property="og:url" content="http://www.kchomelessunion.org" />
+    <!-- twitter preview data -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="kchomelessunion.org" />
+    <meta
+      name="twitter:title"
+      content="KC Homeless Union"
+    />
+    <meta name="twitter:description" content="Kansas City Homeless Union (KCHU) is a union of unhoused Kansas Citians, actively seeking equality and equity, and fighting against the system that perpetuates and sustains homelessness." />
+    <meta
+      name="twitter:image:url"
+      content="%PUBLIC_URL%/kchuLogo325.png"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/kchuLogo325.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>KCHU</title>
